dummy.yaml
# apiVersion: networking.istio.io/v1alpha3
# kind: ServiceEntry
# metadata:
#   name: external-svc-https
#   namespace: authpns
# spec:
#   hosts:
#   - www.googleapis.com
#   location: MESH_EXTERNAL
#   ports:
#   - number: 443
#     name: https
#     protocol: TLS
#   resolution: DNS
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-from-echo
  namespace: authpns

  selfLink: /apis/security.istio.io/v1beta1/namespaces/authpns/authorizationpolicies/allow-from-echo
  uid: c56722eb-bc67-11ea-8c69-42010a55045a
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/echoserver/sa/svc-gke-mfa-wrkld
    - source:
        namespaces:
        - echoserver
  selector:
    matchLabels:
      app: echoserver2221
